Ebisu is in the house!

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "curtiz-utils": "git+https://github.com/fasiha/curtiz-utils.git",
+    "ebisu-js": "^1.0.4",
     "pouchdb": "^7.2.1",
     "pouchdb-upsert": "^2.2.0",
     "react": "^16.12.0",
