--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/pouchdb-upsert": "^2.2.6",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
     "browserify": "^16.5.0",
     "servor": "^3.2.0",
     "typescript": "^3.7.5"
@@ -28,6 +29,7 @@
     "pouchdb": "^7.2.1",
     "pouchdb-upsert": "^2.2.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0"
   }
 }
